--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,8 +7,12 @@ environment:
   sdk: ^3.5.4
 
 dependencies:
+  flame: ^1.22.0
+  flame_forge2d: ^0.18.2+3
   flutter:
     sdk: flutter
+  get: ^4.6.6
+  shared_preferences: ^2.3.3
 
 dev_dependencies:
   flutter_test:
