--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,12 +12,16 @@ dependencies:
   flutter:
     sdk: flutter
   get: ^4.6.6
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
   shared_preferences: ^2.3.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.6
 
 flutter:
   uses-material-design: true
